--- a/DevFreela.Infrastructure/DevFreela.Infrastructure.csproj
+++ b/DevFreela.Infrastructure/DevFreela.Infrastructure.csproj
@@ -14,6 +14,7 @@
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
     <None Remove="Microsoft.EntityFrameworkCore.Tools" />
     <None Remove="Persistence\Configurations\" />
+    <None Remove="Dapper" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CloudServices\" />
@@ -31,5 +32,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Dapper" Version="2.0.123" />
   </ItemGroup>
 </Project>
