--- a/DevFreela.Core/DevFreela.Core.csproj
+++ b/DevFreela.Core/DevFreela.Core.csproj
@@ -12,6 +12,7 @@
     <None Remove="Enums\" />
     <None Remove="Repositories\" />
     <None Remove="DTOs\" />
+    <None Remove="Servoces\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
@@ -19,5 +20,6 @@
     <Folder Include="Enums\" />
     <Folder Include="Repositories\" />
     <Folder Include="DTOs\" />
+    <Folder Include="Servoces\" />
   </ItemGroup>
 </Project>
