feat: Configure RabbitMQ

--- a/DevFreela.Infrastructure/DevFreela.Infrastructure.csproj
+++ b/DevFreela.Infrastructure/DevFreela.Infrastructure.csproj
@@ -16,6 +16,11 @@
     <None Remove="Persistence\Configurations\" />
     <None Remove="Dapper" />
     <None Remove="Auth\" />
+    <None Remove="Payments\" />
+    <None Remove="System.Net.Http" />
+    <None Remove="Microsoft.Extensions.Http" />
+    <None Remove="RabbitMQ.Client" />
+    <None Remove="MessageBus\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CloudServices\" />
@@ -24,6 +29,8 @@
     <Folder Include="CloudServices\Interfaces\" />
     <Folder Include="Persistence\Configurations\" />
     <Folder Include="Auth\" />
+    <Folder Include="Payments\" />
+    <Folder Include="MessageBus\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevFreela.Core\DevFreela.Core.csproj" />
@@ -35,5 +42,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
   </ItemGroup>
 </Project>
