--- a/DevFreela.Application/DevFreela.Application.csproj
+++ b/DevFreela.Application/DevFreela.Application.csproj
@@ -35,6 +35,8 @@
     <None Remove="Validators\ProjectValidator\" />
     <None Remove="Validators\UserValidator\" />
     <None Remove="Commands\SignInCommands\" />
+    <None Remove="RabbitMQ.Client" />
+    <None Remove="Consumers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModel\" />
@@ -60,6 +62,7 @@
     <Folder Include="Validators\ProjectValidator\" />
     <Folder Include="Validators\UserValidator\" />
     <Folder Include="Commands\SignInCommands\" />
+    <Folder Include="Consumers\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevFreela.Infrastructure\DevFreela.Infrastructure.csproj" />
@@ -69,5 +72,6 @@
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
   </ItemGroup>
 </Project>
